[gd_scene load_steps=7 format=3 uid="uid://de3l5t86ejwcd"]

[ext_resource type="Script" uid="uid://deo4c40mpfued" path="res://hud.gd" id="1_54riv"]
[ext_resource type="FontFile" uid="uid://d3xret8asdeg6" path="res://fonts/Xolonium-Regular.ttf" id="1_ftl2u"]

[sub_resource type="InputEventAction" id="InputEventAction_1ya0t"]
action = &"start_game"

[sub_resource type="Shortcut" id="Shortcut_86bi8"]
events = [SubResource("InputEventAction_1ya0t")]

[sub_resource type="InputEventAction" id="InputEventAction_64ctp"]
action = &"quit"

[sub_resource type="Shortcut" id="Shortcut_8sq4i"]
events = [SubResource("InputEventAction_64ctp")]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_54riv")

[node name="TimeLabel" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -375.0
offset_bottom = 65.0
grow_horizontal = 0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("1_ftl2u")
theme_override_font_sizes/font_size = 50
text = "Time: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BestTimeLabel" type="Label" parent="."]
offset_right = 375.0
offset_bottom = 65.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("1_ftl2u")
theme_override_font_sizes/font_size = 40
text = "Best Time: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StageLabel" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -375.0
offset_top = 65.0
offset_bottom = 130.0
grow_horizontal = 0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("1_ftl2u")
theme_override_font_sizes/font_size = 50
text = "Stage: 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.0
offset_right = 150.0
offset_bottom = 65.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("1_ftl2u")
theme_override_font_sizes/font_size = 50
text = "Score: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HealthLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -87.5
offset_top = 60.0
offset_right = 87.5
offset_bottom = 110.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("1_ftl2u")
theme_override_font_sizes/font_size = 30
text = "Health: 3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HighScoreLabel" type="Label" parent="."]
offset_top = 65.0
offset_right = 375.0
offset_bottom = 130.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("1_ftl2u")
theme_override_font_sizes/font_size = 40
text = "Highscore: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DashLabel" type="Label" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -62.0
offset_right = 375.0
grow_vertical = 0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("1_ftl2u")
theme_override_font_sizes/font_size = 40
text = "Dash Ready"
horizontal_alignment = 1
vertical_alignment = 1

[node name="UltLabel" type="Label" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -110.0
offset_right = 375.0
offset_bottom = -48.0
grow_vertical = 0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("1_ftl2u")
theme_override_font_sizes/font_size = 30
text = "Ultimate Ready"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Message" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -120.0
offset_right = 240.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("1_ftl2u")
theme_override_font_sizes/font_size = 64
text = "Eye Survived"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="FPSLabel" type="Label" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -250.0
offset_top = -65.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("1_ftl2u")
theme_override_font_sizes/font_size = 30
text = "FPS: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartButton" type="Button" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -125.0
offset_top = 480.0
offset_right = 125.0
offset_bottom = 580.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_ftl2u")
theme_override_font_sizes/font_size = 64
shortcut = SubResource("Shortcut_86bi8")
text = "Start"

[node name="QuitButton" type="Button" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -125.0
offset_top = 600.0
offset_right = 125.0
offset_bottom = 700.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_ftl2u")
theme_override_font_sizes/font_size = 64
shortcut = SubResource("Shortcut_8sq4i")
text = "Quit"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
